syntax = "proto3";

package pb;

import "google/api/annotations.proto";
option go_package = "grpc_anotation_sample/pb";

message Testservice {
  string id = 1;
  string name = 2;
  int32 age = 3;

}

message CreateTestserviceRequest { Testservice data = 1; }
message CreateTestserviceResponse { Testservice data = 1; }
message GetTestserviceRequest { string id = 1; }
message GetTestserviceResponse { Testservice data = 1; }
message UpdateTestserviceRequest { Testservice data = 1; }
message UpdateTestserviceResponse { Testservice data = 1; }
message DeleteTestserviceRequest { string id = 1; }
message DeleteTestserviceResponse { bool success = 1; }
message ListTestservicesRequest {}
message ListTestservicesResponse { repeated Testservice data = 1; }

service TestserviceService {
  rpc CreateTestservice(CreateTestserviceRequest) returns (CreateTestserviceResponse) {
    option (google.api.http) = { post: "/v1/testservices" body: "*" };
  }
  rpc GetTestservice(GetTestserviceRequest) returns (GetTestserviceResponse) {
    option (google.api.http) = { get: "/v1/testservices/{id}" };
  }
  rpc UpdateTestservice(UpdateTestserviceRequest) returns (UpdateTestserviceResponse) {
    option (google.api.http) = { put: "/v1/testservices/{data.id}" body: "*" };
  }
  rpc DeleteTestservice(DeleteTestserviceRequest) returns (DeleteTestserviceResponse) {
    option (google.api.http) = { delete: "/v1/testservices/{id}" };
  }
  rpc ListTestservices(ListTestservicesRequest) returns (ListTestservicesResponse) {
    option (google.api.http) = { get: "/v1/testservices" };
  }
}

